// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should prioritize disabled over error styles 1`] = `
.circuit-1 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

label > .circuit-1,
label + .circuit-1 {
  margin-top: 4px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border: none;
  border-radius: 8px;
  padding: 8px 12px;
  -webkit-transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
  box-shadow: 0 0 0 1px #DB4D4D;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #B22828;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #DB4D4D;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #DB4D4D;
}

<div
  class="circuit-1"
  disabled=""
>
  <input
    aria-invalid="true"
    class="circuit-0"
    disabled=""
    id="input_12"
  />
</div>
`;

exports[`Input should prioritize disabled over warning styles 1`] = `
.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

.circuit-1 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 1;
}

.circuit-0 {
  background-color: #FFFFFF;
  border: none;
  border-radius: 8px;
  padding: 8px 12px;
  -webkit-transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
  box-shadow: 0 0 0 1px #DB4D4D;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:not(:focus)::-webkit-input-placeholder {
  color: #D8A413;
}

.circuit-0:not(:focus)::-moz-placeholder {
  color: #D8A413;
}

.circuit-0:not(:focus):-ms-input-placeholder {
  color: #D8A413;
}

.circuit-0:not(:focus)::placeholder {
  color: #D8A413;
}

.circuit-0:not(:focus)::-webkit-input-placeholder {
  color: #EA7A7A;
}

.circuit-0:not(:focus)::-moz-placeholder {
  color: #EA7A7A;
}

.circuit-0:not(:focus):-ms-input-placeholder {
  color: #EA7A7A;
}

.circuit-0:not(:focus)::placeholder {
  color: #EA7A7A;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #B22828;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #DB4D4D;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #DB4D4D;
}

<div
  class="circuit-2"
>
  <input
    aria-invalid="true"
    class="circuit-0"
    id="input_13"
  />
  <div
    class="circuit-1"
  >
    <svg
      fill="none"
      height="16"
      role="img"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#circle_cross_small_svg__clip0)"
      >
        <path
          clip-rule="evenodd"
          d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zM6.207 4.793a1 1 0 00-1.414 1.414L6.586 8 4.793 9.793a1 1 0 001.414 1.414L8 9.414l1.793 1.793a1 1 0 001.414-1.414L9.414 8l1.793-1.793a1 1 0 00-1.414-1.414L8 6.586 6.207 4.793z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </g>
      <defs>
        <clippath
          id="circle_cross_small_svg__clip0"
        >
          <path
            d="M0 0h16v16H0V0z"
            fill="#fff"
          />
        </clippath>
      </defs>
    </svg>
  </div>
</div>
`;

exports[`Input should prioritize error over optional styles 1`] = `
.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

.circuit-1 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 1;
}

.circuit-0 {
  background-color: #FFFFFF;
  border: none;
  border-radius: 8px;
  padding: 8px 12px;
  -webkit-transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  background-color: #FAFBFC;
  padding-right: calc( 12px + 16px + 12px );
  box-shadow: 0 0 0 1px #DB4D4D;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:not(:focus)::-webkit-input-placeholder {
  color: #EA7A7A;
}

.circuit-0:not(:focus)::-moz-placeholder {
  color: #EA7A7A;
}

.circuit-0:not(:focus):-ms-input-placeholder {
  color: #EA7A7A;
}

.circuit-0:not(:focus)::placeholder {
  color: #EA7A7A;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #B22828;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #DB4D4D;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #DB4D4D;
}

<div
  class="circuit-2"
>
  <input
    aria-invalid="true"
    class="circuit-0"
    id="input_11"
  />
  <div
    class="circuit-1"
  >
    <svg
      fill="none"
      height="16"
      role="img"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#circle_cross_small_svg__clip0)"
      >
        <path
          clip-rule="evenodd"
          d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zM6.207 4.793a1 1 0 00-1.414 1.414L6.586 8 4.793 9.793a1 1 0 001.414 1.414L8 9.414l1.793 1.793a1 1 0 001.414-1.414L9.414 8l1.793-1.793a1 1 0 00-1.414-1.414L8 6.586 6.207 4.793z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </g>
      <defs>
        <clippath
          id="circle_cross_small_svg__clip0"
        >
          <path
            d="M0 0h16v16H0V0z"
            fill="#fff"
          />
        </clippath>
      </defs>
    </svg>
  </div>
</div>
`;

exports[`Input should render with a Tooltip when passed the validationHint prop 1`] = `
.circuit-3 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-3,
label + .circuit-3 {
  margin-top: 4px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border: none;
  border-radius: 8px;
  padding: 8px 12px;
  -webkit-transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
  box-shadow: 0 0 0 1px #9DA7B1;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #5C656F;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3388FF;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3388FF;
}

.circuit-1 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
}

.circuit-2 {
  display: inline-block;
  width: auto;
  max-width: 280px;
  min-width: 120px;
  background-color: #212933;
  color: #FFFFFF;
  border-radius: 4px;
  padding: 8px 12px;
  position: absolute;
  z-index: 31;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 13px;
  line-height: 20px;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.07), 0 0 1px 0 rgba(12,15,20,0.07),0 2px 2px 0 rgba(12,15,20,0.07);
  right: 50%;
  right: calc(50% - (16px + 4px));
  bottom: 100%;
  bottom: calc(100% + 12px);
  right: 1px;
}

.circuit-2::after {
  display: block;
  content: '';
  width: 0;
  height: 0;
  position: absolute;
  border: 8px solid transparent;
}

.circuit-2::after {
  right: 12px;
}

.circuit-2::after {
  top: 100%;
  border-top-color: #212933;
}

<div
  class="circuit-3"
>
  <input
    class="circuit-0"
    id="input_4"
  />
  <div
    class="circuit-1"
  />
  <div
    class="circuit-2"
  >
    Validation hint
  </div>
</div>
`;

exports[`Input should render with a prefix when passed the prefix prop 1`] = `
.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

.circuit-1 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
}

.circuit-0 {
  background-color: #FFFFFF;
  border: none;
  border-radius: 8px;
  padding: 8px 12px;
  -webkit-transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  padding-left: calc( 12px + 16px + 12px );
  padding-right: calc( 12px + 16px + 12px );
  box-shadow: 0 0 0 1px #9DA7B1;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #5C656F;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3388FF;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3388FF;
}

<div
  class="circuit-2"
>
  <div
    style="width: 24px; height: 24px;"
  />
  <input
    class="circuit-0"
    id="input_2"
  />
  <div
    class="circuit-1"
  />
</div>
`;

exports[`Input should render with a suffix when passed the suffix prop 1`] = `
.circuit-1 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-1,
label + .circuit-1 {
  margin-top: 4px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border: none;
  border-radius: 8px;
  padding: 8px 12px;
  -webkit-transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
  box-shadow: 0 0 0 1px #9DA7B1;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #5C656F;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3388FF;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3388FF;
}

<div
  class="circuit-1"
>
  <input
    class="circuit-0"
    id="input_3"
  />
  <div
    style="width: 24px; height: 24px;"
  />
</div>
`;

exports[`Input should render with custom styles 1`] = `
.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border: none;
  border-radius: 8px;
  padding: 8px 12px;
  -webkit-transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
  box-shadow: 0 0 0 1px #9DA7B1;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #5C656F;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3388FF;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3388FF;
}

.circuit-1 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
}

<div
  class="circuit-2"
>
  <input
    class="circuit-0"
    id="input_16"
  />
  <div
    class="circuit-1"
  />
</div>
`;

exports[`Input should render with default styles 1`] = `
.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border: none;
  border-radius: 8px;
  padding: 8px 12px;
  -webkit-transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
  box-shadow: 0 0 0 1px #9DA7B1;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #5C656F;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3388FF;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3388FF;
}

.circuit-1 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
}

<div
  class="circuit-2"
>
  <input
    class="circuit-0"
    id="input_1"
  />
  <div
    class="circuit-1"
  />
</div>
`;

exports[`Input should render with disabled styles when passed the disabled prop 1`] = `
.circuit-0 {
  background-color: #FFFFFF;
  border: none;
  border-radius: 8px;
  padding: 8px 12px;
  -webkit-transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
  box-shadow: 0 0 0 1px #9DA7B1;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #5C656F;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3388FF;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3388FF;
}

.circuit-1 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

label > .circuit-1,
label + .circuit-1 {
  margin-top: 4px;
}

<div
  class="circuit-1"
  disabled=""
>
  <input
    class="circuit-0"
    disabled=""
    id="input_10"
  />
</div>
`;

exports[`Input should render with inline styles when passed the inline prop 1`] = `
.circuit-0 {
  background-color: #FFFFFF;
  border: none;
  border-radius: 8px;
  padding: 8px 12px;
  -webkit-transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
  box-shadow: 0 0 0 1px #9DA7B1;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #5C656F;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3388FF;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3388FF;
}

.circuit-1 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
}

.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  display: inline-block;
  margin-right: 16px;
}

label > .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

<div
  class="circuit-2"
>
  <input
    class="circuit-0"
    id="input_14"
  />
  <div
    class="circuit-1"
  />
</div>
`;

exports[`Input should render with invalid styles when passed the invalid prop 1`] = `
.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

.circuit-1 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 1;
}

.circuit-0 {
  background-color: #FFFFFF;
  border: none;
  border-radius: 8px;
  padding: 8px 12px;
  -webkit-transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
  box-shadow: 0 0 0 1px #DB4D4D;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:not(:focus)::-webkit-input-placeholder {
  color: #EA7A7A;
}

.circuit-0:not(:focus)::-moz-placeholder {
  color: #EA7A7A;
}

.circuit-0:not(:focus):-ms-input-placeholder {
  color: #EA7A7A;
}

.circuit-0:not(:focus)::placeholder {
  color: #EA7A7A;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #B22828;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #DB4D4D;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #DB4D4D;
}

<div
  class="circuit-2"
>
  <input
    aria-invalid="true"
    class="circuit-0"
    id="input_6"
  />
  <div
    class="circuit-1"
  >
    <svg
      fill="none"
      height="16"
      role="img"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#circle_cross_small_svg__clip0)"
      >
        <path
          clip-rule="evenodd"
          d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zM6.207 4.793a1 1 0 00-1.414 1.414L6.586 8 4.793 9.793a1 1 0 001.414 1.414L8 9.414l1.793 1.793a1 1 0 001.414-1.414L9.414 8l1.793-1.793a1 1 0 00-1.414-1.414L8 6.586 6.207 4.793z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </g>
      <defs>
        <clippath
          id="circle_cross_small_svg__clip0"
        >
          <path
            d="M0 0h16v16H0V0z"
            fill="#fff"
          />
        </clippath>
      </defs>
    </svg>
  </div>
</div>
`;

exports[`Input should render with no margin styles when passed the noMargin prop 1`] = `
.circuit-0 {
  background-color: #FFFFFF;
  border: none;
  border-radius: 8px;
  padding: 8px 12px;
  -webkit-transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
  box-shadow: 0 0 0 1px #9DA7B1;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #5C656F;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3388FF;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3388FF;
}

.circuit-1 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
}

.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  margin-bottom: 0;
}

label > .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

<div
  class="circuit-2"
>
  <input
    class="circuit-0"
    id="input_15"
  />
  <div
    class="circuit-1"
  />
</div>
`;

exports[`Input should render with optional styles when passed the optional prop 1`] = `
.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

.circuit-1 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
}

.circuit-0 {
  background-color: #FFFFFF;
  border: none;
  border-radius: 8px;
  padding: 8px 12px;
  -webkit-transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  background-color: #FAFBFC;
  padding-right: calc( 12px + 16px + 12px );
  box-shadow: 0 0 0 1px #9DA7B1;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #5C656F;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3388FF;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3388FF;
}

<div
  class="circuit-2"
>
  <input
    class="circuit-0"
    id="input_9"
  />
  <div
    class="circuit-1"
  />
</div>
`;

exports[`Input should render with right aligned text 1`] = `
.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

.circuit-1 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
}

.circuit-0 {
  background-color: #FFFFFF;
  border: none;
  border-radius: 8px;
  padding: 8px 12px;
  -webkit-transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  text-align: right;
  padding-right: calc( 12px + 16px + 12px );
  box-shadow: 0 0 0 1px #9DA7B1;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #5C656F;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3388FF;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3388FF;
}

<div
  class="circuit-2"
>
  <input
    class="circuit-0"
    id="input_8"
  />
  <div
    class="circuit-1"
  />
</div>
`;

exports[`Input should render with valid styles when passed the showValid prop 1`] = `
.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border: none;
  border-radius: 8px;
  padding: 8px 12px;
  -webkit-transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
  box-shadow: 0 0 0 1px #9DA7B1;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #5C656F;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3388FF;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3388FF;
}

.circuit-1 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 1;
}

<div
  class="circuit-2"
>
  <input
    class="circuit-0"
    id="input_7"
  />
  <div
    class="circuit-1"
  >
    <svg
      fill="none"
      height="16"
      role="img"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#circle_checkmark_small_svg__clip0)"
      >
        <path
          clip-rule="evenodd"
          d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zm3.812 6.156a1 1 0 00-1.562-1.249L6.948 9.035l-1.21-1.21a1 1 0 00-1.414 1.414l2 2a1 1 0 001.488-.083l4-5z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </g>
      <defs>
        <clippath
          id="circle_checkmark_small_svg__clip0"
        >
          <path
            d="M0 0h16v16H0V0z"
            fill="#fff"
          />
        </clippath>
      </defs>
    </svg>
  </div>
</div>
`;

exports[`Input should render with warning styles when passed the hasWarning prop 1`] = `
.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border: none;
  border-radius: 8px;
  padding: 8px 12px;
  -webkit-transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
  box-shadow: 0 0 0 1px #D8A413;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:not(:focus)::-webkit-input-placeholder {
  color: #D8A413;
}

.circuit-0:not(:focus)::-moz-placeholder {
  color: #D8A413;
}

.circuit-0:not(:focus):-ms-input-placeholder {
  color: #D8A413;
}

.circuit-0:not(:focus)::placeholder {
  color: #D8A413;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #AD7A14;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #D8A413;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #D8A413;
}

.circuit-1 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 1;
}

<div
  class="circuit-2"
>
  <input
    class="circuit-0"
    id="input_5"
  />
  <div
    class="circuit-1"
  >
    <svg
      fill="none"
      height="16"
      role="img"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#circle_warning_small_svg__clip0)"
      >
        <path
          clip-rule="evenodd"
          d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zm1 4a1 1 0 00-2 0v4.5a1 1 0 002 0V4zm0 7.5a1 1 0 10-2 0v.5a1 1 0 102 0v-.5z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </g>
      <defs>
        <clippath
          id="circle_warning_small_svg__clip0"
        >
          <path
            d="M0 0h16v16H0V0z"
            fill="#fff"
          />
        </clippath>
      </defs>
    </svg>
  </div>
</div>
`;
